# Agent-credentials-switch

./: AGENTS.md  LICENSE  README.md  ai-login-switcher.spec  ai_login_switcher.py  build.ps1  build.sh  pyproject.toml  requirements.txt
.github/workflows/: release.yml
docs/: pypi-publishing.md
tests/: test_ai_login_switcher.py
