[build-system]
requires = ["hatchling>=1.26", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "ai-login-switcher"
dynamic = ["version"]
description = "Windows/Linux TUI and CLI for switching local Claude Code and Codex login profiles."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "AI Login Switcher contributors" },
]
keywords = ["claude", "codex", "credentials", "cli", "tui", "pipx"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Systems Administration",
  "Topic :: Utilities",
]
dependencies = [
  "textual>=0.86.0",
  "rich>=13.9.0",
]

[project.scripts]
ai-login-switcher = "ai_login_switcher:main"

[tool.hatch.version]
source = "vcs"
raw-options = { version_scheme = "no-guess-dev", local_scheme = "no-local-version" }

[tool.hatch.build.targets.wheel]
py-modules = ["ai_login_switcher"]
